# RL-Final-Project-Training

./: .gitignore  0.5b.yaml  1.5b_lora.yaml  3b_lora.yaml  pyproject.toml
configs/: 0.5b.yaml  1.5b.yaml  1.5b_lora.yaml  3b_lora.yaml  3b_lora_classeval.yaml  7b_lora.yaml  holistic_classeval_3b_lora.yaml
src/: classeval_holistic_train.py  data.py  env.py  env_classeval.py  reward.py  reward_classeval.py  run.sh  train_grpo.py  train_grpo_lora.py  train_grpo_lora_classeval.py
src/data/: apps.py  apps_plus.py
src/holisitc_classeval/: data.py  env.py  reward.py  util.py
