[project]
name = "rl-final-train"
version = "0.1.0"
requires-python = "~=3.13.0"
dependencies = [
    "accelerate>=1.11.0",
    "black>=25.11.0",
    "datasets<4.0.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "trl[vllm]>=0.25.1",
    "wandb>=0.23.0",
]
